2001-06-04  Martin Baulig  <baulig@suse.de>

	* gnome-selector-widget.[ch]: New files.

	* gnome-selector-client.[ch]: Derive from BonoboObject, not BonoboWidget.
	(gnome_selector_client_new_from_objref): Take a Bonobo_Unknown, not a GNOME_Selector.
        (gnome_selector_client_construct_from_objref): Likewise.

	* gnome-entry.[ch]: Derive from GnomeSelectorWidget, not GnomeSelectorClient.
	(gnome_entry_new_from_selector, gnome_entry_construct): Removed.

	* gnome-image-entry.[ch]: Derive from GnomeSelectorWidget, not GnomeSelectorClient.
	(gnome_image_entry_new_from_selector): Removed.

	* gnome-image-selector.[ch]: Derive from GnomeSelectorWidget, not GnomeSelectorClient.
	(gnome_image_selector_new_from_selector, gnome_image_selector_construct): Removed.	

2001-06-03  Martin Baulig  <baulig@suse.de>

	* gnome-selector-dialog-client.c
	(gnome_selector_dialog_client_new): Added `GnomeSelector *selector' argument.

2001-06-03  Martin Baulig  <baulig@suse.de>

	* gnome-selector-component.c (PROP_CONFIG_MONIKER, ensure_properties_handler):
	Removed; this is now done by GnomeSelector.

2001-06-03  Martin Baulig  <baulig@suse.de>

	* gnome-entry.c: Use the new GnomeEntryComponent.
	(PROP_IS_FILE_ENTRY): New property; this widget can now be used both
	as normal and as file entry.

	* gnome-entry.[ch] (gnome_file_entry_new): New function.

	* gnome-file-entry.[ch]: Removed.

	* gnome-selector-component.c
	(PROP_CONFIG_MONIKER): New property. This is a moniker to a Bonobo_PropertyBag
	with the default configuration (look&feel) for the selector.
	(ensure_properties_handler): Set defaults from the property bag.

2001-06-03  Martin Baulig  <baulig@suse.de>

	* gnome-icon-item.[ch]: Derive from GnomeCanvasText.

2001-06-02  Martin Baulig  <baulig@suse.de>

	* gnome-selector-client.h (GnomeSelectorClientClass):
	Added "activate_entry" signal.

2001-06-01  Peter Williams  <peterw@ximian.com>

	* pixmaps/Makefile.am (gnome-stock-pixbufs.h): Add